--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="container">
-        <p>Test</p><br>
+        <p>Test</p>
         <div id="contained">
             <input id = "textColor" type = "color">
             <input id = "textSize" type = "number" min = "5" max = "100" value="16">
@@ -19,6 +19,7 @@
                 <option>Comic Sans MS</option>
             </select>
         </div>
+        <textarea cols="50" rows="5"></textarea>
     </div>
     <script src="app.js"></script>
 
